preparation of arguments has been moved to the common arguments file

--- a/tasks/install/package.yml
+++ b/tasks/install/package.yml
@@ -2,12 +2,12 @@
 # tasks file for sbaerlocher.wmi_exporter
 
 - name: 'package : create download directory'
-  win_file:
+  ansible.windows.win_file:
     path: '{{ wmi_exporter_download_directory }}'
     state: directory
 
 - name: 'package : download wmi_exporter'
-  win_get_url:
+  ansible.windows.win_get_url:
     url: '{{ var_url }}/{{ var_url_file }}'
     dest: '{{ wmi_exporter_download_directory }}\\wmi_exporter.msi'
     proxy_url: '{{ wmi_exporter_proxy }}'
@@ -21,11 +21,13 @@
 
 - name: 'package : downloading on localhost'
   block:
+
     - name: 'package : create temp directory (localhost)'
       tempfile:
         state: directory
       register: tmpdir_installer
       delegate_to: localhost
+
     - name: 'package : download wmi_exporter (localhost)'
       get_url:
         url: '{{ var_url }}/{{ var_url_file }}'
@@ -34,45 +36,34 @@
         validate_certs: '{{ wmi_exporter_validate_certs }}'
       delegate_to: localhost
       register: register_wmi_exporter_local_package
+
     - name: 'package : copy file to remote node'
-      win_copy:
+      ansible.windows.win_copy:
         src: '{{ tmpdir_installer.path }}/wmi_exporter.msi'
         dest: '{{ wmi_exporter_download_directory }}\\wmi_exporter.msi'
+
   always:
+
     - name: 'package : cleanup temp dir (localhost)'
       file:
         path: "{{ tmpdir_installer.path }}"
         state: absent
       delegate_to: localhost
+
   vars:
     var_url: '{{ var_url_base }}/releases/download/v{{ wmi_exporter_version }}'
     var_url_base: https://github.com/prometheus-community/windows_exporter
     var_url_file: 'windows_exporter-{{ wmi_exporter_version }}-{{ wmi_exporter_architecture }}.msi'
+
   when: wmi_exporter_local_download | bool
 
-- name: 'package : create package arguments'
-  set_fact:
-    arguments: "{{ arguments + item.arguments + ' '}}"
-  when: item.condition is defined and item.condition
-  vars:
-    arguments: ''
-  with_items:
-    - arguments: 'ENABLED_COLLECTORS={{ wmi_exporter_enabled_collectors }}'
-      condition: '{{ wmi_exporter_enabled_collectors }}'
-    - arguments: 'LISTEN_ADDR={{ wmi_exporter_listen_addr }}'
-      condition: '{{ wmi_exporter_listen_addr }}'
-    - arguments: 'LISTEN_PORT={{ wmi_exporter_listen_port }}'
-      condition: '{{ wmi_exporter_listen_port }}'
-    - arguments: 'METRICS_PATH={{ wmi_exporter_metrics_path }}'
-      condition: '{{ wmi_exporter_metrics_path }}'
-    - arguments: 'TEXTFILE_DIR={{ wmi_exporter_textfile_dir }}'
-      condition: '{{ wmi_exporter_textfile_dir }}'
-    - arguments: 'EXTRA_FLAGS={{ wmi_exporter_extra_flags }}'
-      condition: '{{ wmi_exporter_extra_flags }}'
+- name: 'package : include prepare arguments'
+  include_tasks: _prepare_arguments.yml
 
 - name: 'package : install wmi_exporter'
-  win_package:
+  ansible.windows.win_package:
+    product_id: "{{ windows_exporter_guid }}"
     path: '{{ wmi_exporter_download_directory }}\\wmi_exporter.msi'
+    chdir: '{{ wmi_exporter_download_directory }}'
     state: present
-    wait: true
-    arguments: '{{ arguments | default(omit) }}'
+    arguments: '{{ wmi_exporter_install_arguments | default([]) | join(" ") }}'
