--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,26 +1,6 @@
 ---
 # tasks file for sbaerlocher.wmi_exporter
 
-- block:
-    - name: 'main : include version search'
-      include_tasks: version.yml
-      when: wmi_exporter_version is undefined
-
-    - name: 'main : check if choco exist'
-      win_stat:
-        path: "C:\\ProgramData\\Chocolatey\\bin\\choco.exe"
-      register: register_wmi_exporter_choco_check
-
-    - name: 'main : set install type choco'
-      set_fact:
-        wmi_exporter_install_type: 'choco'
-      when: >
-        register_wmi_exporter_choco_check.stat.exists and
-        not wmi_exporter_force_package
-
-    - name: 'main : include install type'
-      include_tasks: 'install/{{ var_filename }}.yml'
-      vars:
-        var_filename: "{{ wmi_exporter_install_type | default('package') }}"
-
+- name: 'main : include install for windows hosts'
+  include_tasks: 'install.yml'
   when: ansible_os_family == 'Windows'
